# OpenLeaf

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/badges/: downloads.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  downloads-badge.yml  release.yml
docs/: ai-assistant.md  architecture.md  development.md  document-engines.md  faq.md  features.md  getting-started.md  github-sync.md  install.md  keyboard-shortcuts.md  mcp.md  releasing.md  updates.md
docsite/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docsite/scripts/: sync-docs.mjs
docsite/src/components/: Landing.astro
docsite/src/styles/: landing.css  theme.css
e2e/: .env.example  COVERAGE.md  README.md  fixtures.ts  helpers.ts  mock-ai-server.ts  playwright.config.ts
e2e/tests/: 00-tours.spec.ts  01-library.spec.ts  02-create-compile.spec.ts  03-editor.spec.ts  04-commands.spec.ts  05-rail.spec.ts  06-diagram.spec.ts  07-settings.spec.ts  08-files.spec.ts  09-search.spec.ts  10-shortcuts.spec.ts  11-logs.spec.ts  12-git.spec.ts  13-preflight.spec.ts  14-dictionary.spec.ts  15-fonts.spec.ts  16-editor-toolbar.spec.ts  17-preview-controls.spec.ts  18-modals.spec.ts  19-diagram-deep.spec.ts  20-ai-panel.spec.ts  21-library.spec.ts  22-toolbar.spec.ts  23-code-intel.spec.ts  24-synctex-inverse.spec.ts  25-image-project.spec.ts  26-file-tree.spec.ts  28-ai-chat.spec.ts  29-history-restore.spec.ts  30-project-kinds.spec.ts  31-ai-figure.spec.ts  32-settings-matrix.spec.ts  33-editor-toolbar-full.spec.ts  33-mcp.spec.ts  34-chrome.spec.ts  35-refs-chat.spec.ts  36-ai-agentic.spec.ts  37-ai-mock.spec.ts  38-git-history.spec.ts  39-ai-secret-storage.spec.ts  (+9 more)
media/: README.md
scripts/: bump-version.sh  check-performance-budget.mjs  e2e-run-lock.sh  e2e-run-lock.test.sh  e2e.ps1  e2e.sh  ensure-e2e-sidecars.ps1  ensure-e2e-sidecars.sh  fetch-tectonic.sh  fetch-typst.sh  gen_icon.py  render-template-previews.mjs  smoke-markdown.sh
scripts/fixtures/: markdown-smoke.md  typst-smoke.typ
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: deadlines-extra.json  template-packs.json
src-tauri/resources/templates/article-academic/: template.json
src-tauri/resources/templates/assignment/: template.json
src-tauri/resources/templates/ats-resume/: template.json
src-tauri/resources/templates/bibliography/: main.tex  template.json
src-tauri/resources/templates/blank/: template.json
src-tauri/resources/templates/blank-markdown/: template.json
src-tauri/resources/templates/blank-typst/: template.json
src-tauri/resources/templates/book/: template.json
src-tauri/resources/templates/calendar/: template.json
src-tauri/resources/templates/diagram/: main.tex  template.json
src-tauri/resources/templates/letter/: template.json
src-tauri/resources/templates/modern-resume/: template.json
src-tauri/resources/templates/newsletter/: template.json
src-tauri/resources/templates/resume/: template.json
src-tauri/resources/templates/sidebar-resume/: template.json
src-tauri/resources/templates/thesis/: template.json
src-tauri/resources/templates/typst-report/: template.json
src-tauri/resources/templates/typst-resume/: template.json
src-tauri/src/: assets.rs  chats.rs  citation.rs  commands.rs  config.rs  connectors.rs  deadlines.rs  document_engine.rs  fsperm.rs  git.rs  github.rs  latex_engine.rs  lib.rs  main.rs  menu.rs  ollama.rs  paths.rs  proc.rs  project.rs  sandbox.rs  secrets.rs  state.rs  synctex.rs  template_packs.rs  templates.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  server.rs
src/components/: ErrorBoundary.tsx  SpecimenIllustration.tsx
src/components/ai/: AiChrome.tsx  AiToolsList.tsx  AttachmentChips.tsx  ChatCore.capabilities.test.ts  ChatCore.tsx  ChatHistoryModal.tsx  ChatPanel.tsx  ConnectSourcesDialog.tsx  CopilotOverlay.tsx  ExternalToolApprovals.tsx  ModelSelector.tsx  chat-parts.tsx  (+1 more)
src/contributions/: ai-toolsets.ts  commands.tsx  context-providers.ts  index.ts  tabs.tsx
src/features/: ask-ai-compile-errors.ts  citation.ts  export.ts  import.test.ts  import.ts  latex-engine.ts  pandoc.ts  synctex.test.ts  synctex.ts  template-generate.test.ts  template-generate.ts
src/lib/: ai-context-pack.test.ts  ai-context-pack.ts  ai-context.ts  ai-figure.test.ts  ai-figure.ts  ai-inline.test.ts  ai-inline.ts  ai-pdf-verify.test.ts  ai-pdf-verify.ts  ai-pricing.test.ts  ai-pricing.ts  ai-providers.test.ts  ai-providers.ts  ai-rag.test.ts  ai-rag.ts  ai-tools.test.ts  ai-tools.ts  auto-commit.ts  chat-run-lifecycle.test.ts  chat-run-lifecycle.ts  confetti.ts  crash-report.ts  cross-window.ts  deadlines.test.ts  deadlines.ts  dictionary.test.ts  dictionary.ts  diff-words.ts  diff.test.ts  diff.ts  e2e-probe.ts  github-url.test.ts  github-url.ts  github.test.ts  github.ts  harper.ts  latex-packages.ts  latex-tools.test.ts  latex-tools.ts  log.ts  (+28 more)
src/store/: agent-handoff.ts  agent-memory.ts  agent-todos.ts  chats.test.ts  chats.ts  citation.ts  compile.test.ts  compile.ts  deadlines.ts  diff.ts  engine.ts  favorites.ts  files.ts  git-status.ts  github.ts  home-view.ts  import.ts  inlineEdit.ts  latex-tools.ts  library-sidebar.ts  mcp-activity.ts  mcp-approvals.test.ts  mcp-approvals.ts  pdf-view.ts  preflight.ts  project-colors.ts  project-index.ts  references.ts  rename.ts  settings.test.ts  settings.ts  tab-order.ts  toast.ts  updates.test.ts  updates.ts
src/styles/: globals.css
website/: .gitignore  astro.config.mjs  package.json
website/scripts/: sync-docs.mjs
(+203 files in other folders)
